--- a/style/style.css
+++ b/style/style.css
@@ -17,13 +17,19 @@ body {
   text-align: center;
 }
 .indivlog {
-  margin: 8px auto;
+  padding: 8px;
+  text-overflow: ellipsis;
+  overflow-x: hidden;
+  border-color: black;
+  border-style: solid;
+  border-width: 1px 0px;
+  margin: -1px auto;
 }
-.footer-button{
+.footer-button {
   border: 2px solid lightskyblue !important;
   background-color: aliceblue !important;
   transition-duration: 0.4s;
 }
-.footer-button:hover{
+.footer-button:hover {
   background-color: lightskyblue !important;
 }
